--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
     "qs": "^6.12.1",
+    "sass": "^1.77.2",
+    "sass-loader": "^14.2.1",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
