--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
+    "echarts": "^5.5.0",
+    "echarts-gl": "^2.0.9",
     "element-ui": "^2.15.14",
     "qs": "^6.12.1",
     "sass": "^1.77.2",
