--- a/labsystem/package.json
+++ b/labsystem/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.11",
     "element-ui": "^2.15.14",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
